# rust-shortener-url

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.github/workflows/: build.yml  pipeline.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20230719_182205_create_url_table.rs
src/: main.rs
src/entity/: link.rs  mod.rs  prelude.rs
src/handler/: link.rs  mod.rs  prelude.rs
src/repository/: link.rs  mod.rs  prelude.rs
src/utils/: server.rs
